--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: system-ui;
   margin: 0;
   padding: 0;
 }
+
+
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Noto Sans HK', sans-serif;;
 }
 
 nav a {
-  margin-right: 10px;
+  display:inline-block;
+  margin: 18px;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 a {
   text-decoration: none;
-  color: blue;
+  color: #ac0000;
 }
 
 a:visited {
-  color: blue;
+  color: #ac0000;
 }
 
 body {
   text-align: center;
   margin: 0;
   padding: 0;
+  background-color: #040404;
 }
 
 header {
@@ -32,11 +38,13 @@ header {
   top: 0;
   position: sticky;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
-  background-color: rgb(240, 240, 240);
+  /* background-color: rgb(240, 240, 240); */
 }
 
 h2{ 
