--- a/style.css
+++ b/style.css
@@ -2,12 +2,24 @@ html {
   font-family: system-ui;
   margin: 0;
   padding: 0;
+  cursor: none !important; 
 }
 
+a {
+  cursor: none;
+}
 
+a:hover {
+  cursor: none;
+}
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Noto Sans HK', sans-serif;;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
 }
 
 nav a {
@@ -27,7 +39,7 @@ a:visited {
 }
 
 body {
-  text-align: center;
+  text-align: left;
   margin: 0;
   padding: 0;
   background-color: #040404;
@@ -35,16 +47,20 @@ body {
 
 header {
   z-index: 100;
-  top: 0;
-  position: sticky;
+  /* height: 100vh; */
+  /* width: 100vw; */
+  /* top: 0; */
+  
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: start;
+  justify-content: start;
+  align-items: start;
   /* justify-content: space-between; */
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  /* background-color: rgb(240, 240, 240); */
+  /* padding-top: 10px; */
+  /* padding-bottom: 10px; */
+  /* padding-left: 10px; */
+  /* background-color: rgb(240, 240, 240);*/
 }
 
 h2{ 
@@ -58,9 +74,16 @@ h2{
   display: inline-block;
 }
 
+.main-link {
+  position: fixed;
+    bottom: 15px;
+    left: 15px;
+    z-index: 1000;
+}
+
 img {
-  
-  width: 330px;
+  width: 150px; 
+     border-radius: 50%;
 }
 
 article {
@@ -94,7 +117,7 @@ figcaption {
 }
 
 ol, ul {
-  text-align: center;
+  text-align: left;
   list-style-position: inside;
   display: inline-block;
        margin: 0 auto;
@@ -224,4 +247,22 @@ summary {
   padding: 15px 0;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+video {
+  object-fit: fill;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.trail { /* className for the trail elements */
+  position: absolute;
+  height: 30px; width: 30px;
+  border-radius: 50%;
+  background-color: #ac0000;
+  z-index:1000000;
+  box-shadow: 0 0 10px 30px #040404;
 }
